# 2018-HUAWEI-Code-Craft

./: CMakeLists.txt  README.md
ecs/: CMakeLists.txt  CPoint.h  LinearRegression.cpp  LinearRegression.h  Linear_shuai.h  Method.h  Utils.cpp  Utils.h  ecs.cpp  input_3hosttypes_5flavors_1week.txt  mat.h  out.txt  predict.cpp  predict.h  source.h
